--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,8 @@
                 <ul>
                     <li><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'create' %}">Create</a></li>
+                    <li><a href="{% url 'post' %}">Posts</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
                 </ul>
             </nav>
         </header>
