--- a/templates/post.html
+++ b/templates/post.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'home.html' %}
 
 {% block title %}
     Post
@@ -12,11 +12,9 @@
 
 
 {% block content %}
-
-    <div class="container">
-        {% for post in posts %}
-            <a href="/post_detail/{{post.id}}/"><img class="postimg" src="{{ post.image.url }}" alt="post"/></a>
-        {% endfor %}
-    </div>
-
+    {% for post in posts %}
+        <div class="container">
+            <a href="{{post.id}}/"><img class="postimg" src="{{ post.image.url }}" alt="post"/></a>
+        </div>
+    {% endfor %}
 {% endblock %}
