--- a/templates/about.html
+++ b/templates/about.html
@@ -12,24 +12,22 @@
             padding: 0;
             margin-bottom: 100;
         }
-    
-        h1 {
-            margin: 0;
-        }
-    
-        main {
-            max-width: 800px;
-            margin: 20px auto;
+        h2 {
+            margin-top: 100px;
             padding: 20px;
+            margin-left: 700px;
         }
-    
-        img {
-            max-width: 100%;
-            height: auto;
+        a {
+            color: black;
         }
-    
+        a:hover {
+            color: rgb(0, 102, 255);
+        }
         p {
-            line-height: 1.5;
+            margin-left: 560px;
+        }
+        h1 {
+            margin-left: 350px;
         }
         </style>
     </head>
@@ -37,26 +35,12 @@
     
         <main>
         <h2>About me</h2>
-        <p>Привет! Меня зовут [Ваше имя]. Я являюсь [должность или специализация]. У меня есть опыт работы в [область деятельности] и умения в [технологии или навыки]. Я стремлюсь к постоянному развитию и созданию качественных проектов.</p>
-    
-        <h2>Проекты</h2>
-        <ul>
-            <li>
-            <h3>Название проекта 1</h3>
-            <p>Описание проекта 1.</p>
-            </li>
-            <li>
-            <h3>Название проекта 2</h3>
-            <p>Описание проекта 2.</p>
-            </li>
-            <li>
-            <h3>Название проекта 3</h3>
-            <p>Описание проекта 3.</p>
-            </li>
-        </ul>
+        <h1>Привет! Меня зовут Тимур. Я являюсь backend developer.</h1>
+        <h1>У меня есть опыт работы в python и умения в Django.</h1>
+        <h1></h1>
     
         <h2>Контакты</h2>
-        <p>Вы можете связаться со мной по электронной почте: [ваша электронная почта].</p>
+        <h1>Вы можете связаться со мной с помощью telegram <a href="https://t.me/Zeniiixxx">нажми сюда</a></h1>
         </main>
     </body>
     </html>
