--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,7 +5,7 @@
     <div class="post_detail">
         <a href="{{ post.image.url }}"><img class="postimg1" src="{{ post.image.url }}" alt="post"/></a>
         <h3>{{ post.title }}</h3>
-        <h4>{{ post.description|linebreaks }}</h4>
+        <h4>{{ post.description }}</h4>
         <p>by {{ post.author }}</p>
     </div>
 
