--- a/templates/home.html
+++ b/templates/home.html
@@ -17,16 +17,31 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <nav>
-                <ul>
-                    <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="{% url 'create' %}">Create</a></li>
-                    <li><a href="{% url 'post' %}">Posts</a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
-                    <li style="padding-left: 810px ;"><a href="{% url 'login' %}">Login</a></li>
-                    <li><a id="register" href="{% url 'register' %}">Sign up</a></li>
-                </ul>
-            </nav>
+            <span class="user">
+                {% if request.user.is_authenticated %}
+                    <nav>
+                        <ul>
+                            <li><a href="{% url 'home' %}">Home</a></li>
+                            <li><a href="{% url 'create' %}">Create</a></li>
+                            <li><a href="{% url 'post' %}">Posts</a></li>
+                            <li><a href="{% url 'about' %}">About</a></li>
+                            <p style="padding-left: 1250px; padding-top: 10px; color: white;">Hello {{ request.user.first_name | default:request.user.username }}</p>
+                            <li><a href="{% url 'logout' %}">Log out</a></li>
+                        </ul>
+                    </nav>
+                {% else %}
+                    <nav>
+                        <ul>
+                            <li><a href="{% url 'home' %}">Home</a></li>
+                            <li><a href="{% url 'create' %}">Create</a></li>
+                            <li><a href="{% url 'post' %}">Posts</a></li>
+                            <li><a href="{% url 'about' %}">About</a></li>
+                            <li><a id="sign_up" href="{% url 'register' %}">Sign up</a></li>
+                            <li><a id="sign_up" href="{% url 'login' %}">Sign in</a></li>
+                        </ul>
+                    </nav>
+                {% endif %}
+            </span>
         </header>
         {% block content %}
             {% for post in posts %}
